# procedural_planets

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md
report/: Makefile  log.md  report.md
report/images/: shaking.webm
resources/: settings.conf
resources/shaders/: canvas.glsl  noise.glsl  planet.frag  planet.vert  planets.comp  render2d.frag  render2d.vert  scene.frag  scene.vert
src/: gamelogic.rs  globals.rs  main.rs  mesh.rs  player.rs  procedural_planet.rs  scene.rs  scene_graph.rs  shader.rs  texture.rs  util.rs
