[package]
name = "grafvis_tdt4230_final_project"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# glium = "0.31.0"
glutin = "0.28.0"
gl = "0.14.0"
nalgebra-glm = "0.16.0"
# obj-rs = { version = "0.7.0", features = ["glium"] }
tobj = "3.2.1"
image = "0.24.1"
itertools = "0.10.3"
rand = "0.8.5"
